# sindhu

./: .dockerignore  .env.dev.example  .gitignore  Dockerfile  Dockerfile.mageai.prod  Jenkinsfile  docker-compose.production.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  sonar-project.properties
.agents/rules/: sindhu.md
clients/: generate-client
clients/config/: dhara-client-generator.yml
clients/sindhu-client/: README.md  pyproject.toml
clients/sindhu-client/sindhu_client/: __init__.py
clients/sindhu-client/sindhu_client/api/v1/: all_v1_stations_get.py  authentication_v1_auth_login_post.py  create_api_token_v1_system_settings_api_tokens_create_post.py  create_v1_stations_create_post.py  create_v1_system_settings_create_post.py  delete_api_token_v1_system_settings_api_tokens_delete_api_token_id_delete.py  delete_v1_stations_delete_station_id_delete.py  get_api_token_v1_system_settings_api_tokens_get_api_token_id_get.py  get_me_v1_users_me_get.py  get_v1_stations_station_id_get.py  get_v1_system_settings_get.py  login_for_access_token_v1_auth_token_post.py  refresh_token_v1_auth_refresh_token_get.py  update_api_token_v1_system_settings_api_tokens_update_api_token_id_put.py  update_v1_stations_update_station_id_put.py  update_v1_system_settings_update_put.py
clients/sindhu-client/sindhu_client/models/: __init__.py  api_token.py  api_token_response.py  body_all_v1_stations_get.py  body_authentication_v1_auth_login_post.py  body_login_for_access_token_v1_auth_token_post.py  context.py  create_system_setting.py  create_update_api_token.py  create_update_station.py  create_update_station_metadata_type_0.py  geo_object.py  http_validation_error.py  station.py  station_list.py  station_metadata_type_0.py  system_setting_response.py  token.py  update_system_setting.py  user.py  validation_error.py
mageai/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
scripts/: auto-build-brython.py  backup-mongodb.py  deploy-production.sh  init_admin.py  npm  run-api  run-web  seed_zones_songkhla.py  setup-mageai
sindhu/: default_settings.py
sindhu/api/: __init__.py
sindhu/cmd/: api.py  web.py
sindhu/models/: __init__.py  caches.py  files.py  logs.py  sample_docs.py  stations.py  system_settings.py  tokens.py  users.py  zones.py
sindhu/schemas/: __init__.py  bases.py  caches.py  metrics.py  sample_docs.py  stations.py  (+4 more)
(+113 files in other folders)
